--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: moreant's Blog
+title: 莫居尘
 subtitle: 学习即输入输出
 description: 别教了，我学不动了
 keywords: 前端 后端 运维
