--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -18,7 +18,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
-        
+
+    - name: Use cache
+      uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
     - name: Setup Hexo
       run: |
         npm install hexo-cli -g
