--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -52,6 +52,6 @@ jobs:
         cd ../
         mv deploy/.git/ ./public/
         cd ./public/
-        git add -all .
+        git add --all .
         git commit -m "CI built at `date +"%Y-%m-%d %H:%M:%S"`"
         git push --force "https://${GH_TOKEN}@${GH_REF}" master:master
