--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -42,18 +42,16 @@ jobs:
         GH_NAME: moreant
         GH_EMAIL: 552191481@qq.com
         GH_REF: github.com/moreant/moreant.github.io.git
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN  }}
       run: |
         git config --global user.name $GH_NAME
         git config --global user.email $GH_EMAIL
-        git clone https://"$GH_REF" deploy
-        cd deploy
+        git clone https://"$GH_REF" .deploy_git
+        cd .deploy_git
         git checkout master
         cd ../
-        mv deploy/.git/ ./public/
+        mv .deploy_git/.git/ ./public/
         cd ./public/
-        git add --all .
+        git add .
         git commit -m "CI built at `date +"%Y-%m-%d %H:%M:%S"`"
-        git push --force "https://99c95b2e6dc4c2e99507dd188be81633866c466c@github.com/moreant/moreant.github.io.git" master:master
-
-  
+        git push --force "https://"$GH_TOKEN"@"$GH_REF"" master:master
