--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   Hexo-CI-GAD:
 
-    runs-on: ubuntu@19.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -47,7 +47,7 @@ jobs:
         GH_REF: github.com/moreant/moreant.github.io.git
         GH_TOKEN: ${{ secrets.TOKEN  }}
       run: |
-        timedatectl set-timezone Asia/Shanghai
+        sudo timedatectl set-timezone "Asia/Shanghai"
         git config --global user.name $GH_NAME
         git config --global user.email $GH_EMAIL
         git clone https://"$GH_REF" .deploy_git
