--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -23,9 +23,9 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        key: node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-node-
+          node-
 
     - name: Setup Hexo
       run: |
