--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -153,13 +153,13 @@ search:
 # Comment plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Comment/
 comment:
-    type: gitment
-    owner: moreant
-    repo: moreant.github.io
+    type: gitalk
     client_id: 95d6df1a949eeea73df4
-    client_secret: 8f06d7871c1db329f5339e191c5269699f4f5d3f  
-    per_page: 20                    # 可选填
-    max_comment_height: 250         # 可选填
+    client_secret: 8f06d7871c1db329f5339e191c5269699f4f5d3f
+    repo: moreant.github.io
+    owner: moreant
+    admin:
+        - moreant  
 # comment:
 #     type: disqus
 #     # Disqus shortname
@@ -283,23 +283,23 @@ widgets:
         position: left
         type: tags
     # Google FeedBurner email subscription widget configurations
-    -
-        # Where should the widget be placed, left sidebar or right sidebar
-        position: left
-        type: subscribe_email
-        # Hint text under the email input
-        description: 
-        # Feedburner ID
-        feedburner_id: ''
+    # -
+    #     # Where should the widget be placed, left sidebar or right sidebar
+    #     position: left
+    #     type: subscribe_email
+    #     # Hint text under the email input
+    #     description: 
+    #     # Feedburner ID
+    #     feedburner_id: ''
     # Google AdSense unit configurations
-    -
-        # Where should the widget be placed, left sidebar or right sidebar
-        position: left
-        type: adsense
-        # AdSense client ID
-        client_id: ''
-        # AdSense AD unit ID
-        slot_id: ''
+    # -
+    #     # Where should the widget be placed, left sidebar or right sidebar
+    #     position: left
+    #     type: adsense
+    #     # AdSense client ID
+    #     client_id: ''
+    #     # AdSense AD unit ID
+    #     slot_id: ''
 # Plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/
 plugins:
